--- a/src/app/components/misc/nav/nav.component.html
+++ b/src/app/components/misc/nav/nav.component.html
@@ -2,12 +2,12 @@
     <div class="pos-f-t">
         <div class="collapse" id="navbarToggleExternalContent">
           <div class="bg-primary p-4">
-            <!-- <h4 class="text-white">Main Menu</h4> -->
             <div class="dropdown navbar-left" *ngIf="user">
                 <a class="text-light d-block mt-2 ml-2" [routerLink]="['/parkings']"><i class="fas fa-map"></i><strong>&nbsp;&nbsp;Map</strong></a>
                 <a class="text-light d-block mt-2 ml-2" [routerLink]="['/parkings/create']" *ngIf="user.role === 'admin' || user.role === 'company'"><i class="fas fa-plus-square"></i><strong>&nbsp;&nbsp;&nbsp;Create Parking</strong></a>
                 <a class="text-light d-block mt-2 ml-2" [routerLink]="['/parkings/list']" *ngIf="user.role === 'admin' || user.role === 'company'"><i class="fas fa-car"></i><strong>&nbsp;&nbsp;&nbsp;List Parking</strong></a>
-                <a class="text-light d-block mt-2 ml-2" [routerLink]="['/user/list']"><i class="fas fa-users"></i><strong>&nbsp;&nbsp;Users List</strong></a>
+                <a class="text-light d-block mt-2 ml-2" [routerLink]="['/user']"><i class="fas fa-users"></i><strong>&nbsp;&nbsp; Profile</strong></a>
+                <a class="text-light d-block mt-2 ml-2" [routerLink]="['/user/list']" *ngIf="user.role === 'admin'"><i class="fas fa-users"></i><strong>&nbsp;&nbsp; Users List</strong></a>
             </div>
           </div>
         </div>
@@ -17,9 +17,9 @@
             <span class="navbar-brand">&nbsp;&nbsp;&nbsp;Parking<strong>Spot</strong></span>
           </button>
             <ul class="nav navbar-nav text-light d-inline">
-              <li class="d-inline"><a [routerLink]="['/signup']" class="btn.btn-default btn-lg text-light"><i class="fas fa-user-plus"></i> Sign Up</a></li>
-              <li class="d-inline"><a [routerLink]="['/login']" class="btn.btn-default btn-lg text-light"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-              <li class="d-inline"><a (click)="onclickLogout()" class="btn.btn-default btn-lg"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+              <li class="d-inline"><a *ngIf="!user" [routerLink]="['/signup']" class="btn.btn-default btn-lg text-light"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+              <li class="d-inline"><a *ngIf="!user" [routerLink]="['/login']" class="btn.btn-default btn-lg text-light"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+              <li class="d-inline"><a *ngIf="user" (click)="onclickLogout()" class="btn.btn-default btn-lg"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
             </ul>
         </nav>
       </div>
