--- a/src/app/components/user/user-profile/user-profile.component.html
+++ b/src/app/components/user/user-profile/user-profile.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row align-items-center">
     <div class="card col-6">
-        <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
+        <!-- <img class="card-img-top" src=""> -->
         <div class="card-body">
 <form #editForm="ngForm" (ngSubmit)="onSubmitEdit(editForm)">
     <div class="card-title">
