--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+h1 {
+    font-family: 'Faster One', cursive;
+    font-size: 50px;
+    padding-left: 20px;
+    color: #708090;
+}
+
