commit post deploy

--- a/src/app/components/parking/map/map.component.html
+++ b/src/app/components/parking/map/map.component.html
@@ -2,8 +2,7 @@
 <agm-map
   [latitude]="lat"
   [longitude]="lng"
-  [zoom]="zoom"
-  [backgroundColor]="backgroundColor">
+  [zoom]="zoom">
   <agm-marker [latitude]="lat" 
               [longitude]="lng"
               [iconUrl]="'./assets/img/you-are-here-icon.png'">
