--- a/src/app/components/parking/parking-list/parking-list.component.css
+++ b/src/app/components/parking/parking-list/parking-list.component.css
@@ -5,8 +5,11 @@ button {
 .card {
   color: #7a7a7a;
   border-radius: 3px;
-  margin-bottom: 15px;
   background: #fff;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  padding: 30px;
+}
+
+.negative {
+  margin-top: -39px;
+  margin-left: 87px;
 }
