--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -1,63 +1,65 @@
 <div class="container">
 
-  <h1 class="row align-items-center justify-content-left">Users List</h1>
+  <div class="row align-items-center justify-content-center mt-4">
+    <h1>Users List</h1>
+  </div>
 
-  <div class="row align-items-center justify-content-left" *ngFor="let user of users">
+
+  <div class="row align-items-center justify-content-center mt-4" *ngFor="let user of users">
     <!-- <div class="panel-group form-group"> -->
       <div class="card col-6">
 
-        <form class="contenedor" #editForm="ngForm" (ngSubmit)="onSubmitEdit(editForm.value)">
-          <div class="card-header text-left"> 
+        <form class="contenedor mt-3" #editForm="ngForm" (ngSubmit)="onSubmitEdit(editForm.value)">
+          <div class="card-header text-left">
             <h4><strong>{{user.name}}</strong> <i>from {{user.city}}</i></h4>
           </div>
-          <ul class="list-group list-group-flush">
-          <li class="list-group-item col-6">
+          <ul class="list-group list-group-flush mt-2">
+          <li class="list-group-item col-9">
             <div class="input-group">
-            <label>Name</label> &nbsp;
-            <input type="text" 
-              class="form-control" 
-              name="name" 
-              #name="ngModel" 
-              [value]="user.name" 
+            <label class="mt-2">Name</label> &nbsp;
+            <input type="text"
+              class="form-control"
+              name="name"
+              #name="ngModel"
+              [value]="user.name"
               [(ngModel)]="user.name"
             required>
           </div>
           </li>
-          <li class="list-group-item col-6"> 
+          <li class="list-group-item col-9">
               <div class="input-group">
-            <label>Email</label> &nbsp;
-              <input type="text" 
-                class="form-control" 
-                name="email" 
-                #email="ngModel" 
-                [value]="user.email" 
+            <label class="mt-2">Email</label> &nbsp;
+              <input type="text"
+                class="form-control"
+                name="email"
+                #email="ngModel"
+                [value]="user.email"
                 [(ngModel)]="user.email"
                required>
               </div>
           </li>
-              <input name="id" 
-                type="hidden" 
-                #id="ngModel" 
-                [value]="user.id" 
+              <input name="id"
+                type="hidden"
+                #id="ngModel"
+                [value]="user.id"
                 [(ngModel)]="user.id">
 
-            <button class="btn btn-success">Save</button>
+            <button class="btn btn-success mt-4">Save</button>
           </ul>
         </form>
 
         <form #deleteForm="ngForm" (ngSubmit)="onSubmitDelete(deleteForm.value)">
-          <input name="id" 
-            type="hidden" 
-            #id="ngModel" 
-            [value]="user.id" 
+          <input name="id"
+            type="hidden"
+            #id="ngModel"
+            [value]="user.id"
             [(ngModel)]="user.id">
 
-          <button class="btn btn-danger">Delete</button>
+          <button class="btn btn-danger negative">Delete</button>
         </form>
-          
+
 
     </div>
-
 
     </div>
   </div>
