--- a/src/app/components/parking/map/map.component.css
+++ b/src/app/components/parking/map/map.component.css
@@ -2,3 +2,16 @@ agm-map {
   width: 100vw;
   height: 100vh;
 }
+
+.info-title {
+  font-size: 40px;
+}
+
+.info-address {
+  font-size: 17px;
+}
+
+img {
+  width: 50px;
+  height: 50px;
+}
