--- a/src/app/components/parking/map/map.component.html
+++ b/src/app/components/parking/map/map.component.html
@@ -1,26 +1,28 @@
 <div>
-<agm-map
-  [latitude]="lat"
-  [longitude]="lng"
-  [zoom]="zoom">
+  <agm-map (mapClick)="closeInfoWindow()"
+    [latitude]="lat"
+    [longitude]="lng"
+    [zoom]="zoom">
 
-  <agm-circle [latitude]="lat" 
-              [longitude]="lng" 
-              [radius]="radius" 
-              [fillColor]="fillColor">
-  </agm-circle>
+    <agm-circle (circleClick)="closeInfoWindow()"
+                [latitude]="lat"
+                [longitude]="lng"
+                [radius]="radius"
+                [fillColor]="fillColor">
+    </agm-circle>
 
 
-  <agm-marker [latitude]="lat" 
-              [longitude]="lng"
-              [iconUrl]="'./assets/img/you-are-here-icon.png'">
-              </agm-marker>
+    <agm-marker [latitude]="lat"
+                [longitude]="lng"
+                [iconUrl]="'./assets/img/you-are-here-icon.png'">
+    </agm-marker>
 
-  <agm-marker *ngFor="let parking of parkings; let i = index"
-              [latitude]="parking.location[1]"
-              [longitude]="parking.location[0]"
-              [iconUrl]="'./assets/img/parking-marker2.png'"
-  >
+    <agm-marker (markerClick)="pushInfoWindow(infowindow)"
+                *ngFor="let parking of parkings; let i = index"
+                [latitude]="parking.location[1]"
+                [longitude]="parking.location[0]"
+                [iconUrl]="parkingIcon"
+    >
       <agm-direction *ngIf="dir"
                      [origin]="dir.origin"
                      [destination]="dir.destination"
@@ -28,13 +30,16 @@
                      [avoidHighways]="avoidHighways"
       >
       </agm-direction>
-      <agm-info-window>
-        <h3>{{parking.name}}</h3>
-        <p> {{parking.address }} </p>
-        <button class="btn btn-success" (click)="getDirection(i)">GO TO</button>
-
+      <agm-info-window
+        #infowindow
+      >
+        <div class="display-4">
+        <p class="info-title">{{parking.name}}</p>
+        <p class="info-address"> {{parking.address }} </p>
+        <button class="btn btn-primary" (click)="getDirection(i)">GO TO</button>
+        </div>
       </agm-info-window>
-  </agm-marker>
+    </agm-marker>
 
-</agm-map>
+  </agm-map>
 </div>
