autocomplete almost included

--- a/src/app/components/parking/map/map.component.html
+++ b/src/app/components/parking/map/map.component.html
@@ -57,4 +57,15 @@
     </agm-marker>
 
   </agm-map>
+  <div class="form-group">
+    <input 
+      placeholder="search for location" 
+      autocorrect="off" 
+      autocapitalize="off" 
+      spellcheck="off" 
+      type="text" 
+      class="form-control" 
+      #search [formControl]="searchControl"
+    >
+  </div>
 </div>
