icon changes and search box

--- a/src/app/components/parking/map/map.component.html
+++ b/src/app/components/parking/map/map.component.html
@@ -1,4 +1,18 @@
 <div>
+    <div class="input-group">
+      <button class="btn-light" disabled>
+        <i class="fa fa-search"></i>
+      </button>
+        <input 
+          placeholder="search for location" 
+          autocorrect="off" 
+          autocapitalize="off" 
+          spellcheck="off" 
+          type="text" 
+          class="form-control" 
+          #search [formControl]="searchControl"
+        >
+      </div>
   <agm-map (mapClick)="closeInfoWindow()"
     [latitude]="lat"
     [longitude]="lng"
@@ -21,7 +35,7 @@
                 *ngFor="let parking of parkings; let i = index"
                 [latitude]="parking.location[1]"
                 [longitude]="parking.location[0]"
-                [iconUrl]="'./assets/img/marker2.png'"
+                [iconUrl]="icon[i]"
                 [label]="labelOptions[i]"
 
     >
@@ -57,15 +71,5 @@
     </agm-marker>
 
   </agm-map>
-  <div class="form-group">
-    <input 
-      placeholder="search for location" 
-      autocorrect="off" 
-      autocapitalize="off" 
-      spellcheck="off" 
-      type="text" 
-      class="form-control" 
-      #search [formControl]="searchControl"
-    >
-  </div>
+
 </div>
