--- a/src/app/components/misc/nav/nav.component.html
+++ b/src/app/components/misc/nav/nav.component.html
@@ -12,14 +12,14 @@
           </div>
         </div>
         <nav class="navbar navbar-dark bg-primary">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler mt-1 ml-4 mb-2" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             <span class="navbar-brand">&nbsp;&nbsp;&nbsp;Parking<strong>Spot</strong></span>
           </button>
             <ul class="nav navbar-nav text-light d-inline">
-              <li class="d-inline"><a *ngIf="!user" [routerLink]="['/signup']" class="btn.btn-default btn-lg text-light"><i class="fas fa-user-plus"></i> Sign Up</a></li>
-              <li class="d-inline"><a *ngIf="!user" [routerLink]="['/login']" class="btn.btn-default btn-lg text-light"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-              <li class="d-inline"><a *ngIf="user" (click)="onclickLogout()" class="btn.btn-default btn-lg"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+              <li class="d-inline mr-4 mt-5"><a *ngIf="!user" [routerLink]="['/signup']" class="btn.btn-default btn-lg text-light"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+              <li class="d-inline mr-4 mt-5"><a *ngIf="!user" [routerLink]="['/login']" class="btn.btn-default btn-lg text-light"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+              <li class="d-inline mr-4 mt-5"><a *ngIf="user" (click)="onclickLogout()" class="btn.btn-default btn-lg"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
             </ul>
         </nav>
       </div>
