--- a/src/app/components/parking/map/map.component.css
+++ b/src/app/components/parking/map/map.component.css
@@ -1,6 +1,7 @@
 agm-map {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 90vh;
+  overflow: hidden;
 }
 
 .info-title {
@@ -14,4 +15,18 @@ agm-map {
 img {
   width: 50px;
   height: 50px;
+}
+
+.is-blue {
+  background-color: #0c78fd;
+}
+
+.is-blue ::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+  opacity: 1;
+}
+
+.is-margin {
+  margin-left: 27px;
+  margin-top: 12px;
 }
