--- a/src/app/components/misc/nav/nav.component.css
+++ b/src/app/components/misc/nav/nav.component.css
@@ -1,7 +1,7 @@
 .dropbtn {
     /* background-color: #4CAF50; */
     color: white;
-    padding: 16px;
+    /* padding: 16px; */
     font-size: 16px;
     border: none;
 }
@@ -22,15 +22,15 @@
 
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    /* padding: 12px 16px; */
     text-decoration: none;
-    display: block;
+    /* display: block; */
 }
 
 .dropdown-content a:hover {background-color: #ddd}
 
 .dropdown:hover .dropdown-content {
-    display: block;
+    /* display: block; */
 }
 
 /* .dropdown:hover .dropbtn {
