--- a/src/app/components/misc/nav/nav.component.html
+++ b/src/app/components/misc/nav/nav.component.html
@@ -16,10 +16,12 @@
             <span class="navbar-toggler-icon"></span>
             <span class="navbar-brand">&nbsp;&nbsp;&nbsp;Parking<strong>Spot</strong></span>
           </button>
-            <ul class="nav navbar-nav text-light d-inline">
-              <li class="d-inline mr-4 mt-5"><a *ngIf="!user" [routerLink]="['/signup']" class="btn.btn-default btn-lg text-light"><i class="fas fa-user-plus"></i> Sign Up</a></li>
-              <li class="d-inline mr-4 mt-5"><a *ngIf="!user" [routerLink]="['/login']" class="btn.btn-default btn-lg text-light"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-              <li class="d-inline mr-4 mt-5"><a *ngIf="user" (click)="onclickLogout()" class="btn.btn-default btn-lg"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+            <ul class="nav navbar-nav text-light d-inline" *ngIf="!user">
+              <li class="d-inline mr-4"><a [routerLink]="['/signup']" class="btn.btn-default btn-lg text-light navbuttons"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+              <li class="d-inline mr-4"><a [routerLink]="['/login']" class="btn.btn-default btn-lg text-light navbuttons"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+            </ul>
+            <ul *ngIf="user" class="text-light d-inline">
+              <li class="mr-4 d-inline"><a (click)="onclickLogout()" class="btn.btn-default btn-lg logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
             </ul>
         </nav>
       </div>
