--- a/src/app/components/parking/map/map.component.css
+++ b/src/app/components/parking/map/map.component.css
@@ -1,7 +1,6 @@
 agm-map {
   width: 100%;
-  height: 90vh;
-  overflow: hidden;
+  height: 82vh;
 }
 
 .info-title {
@@ -10,11 +9,6 @@ agm-map {
 
 .info-address {
   font-size: 17px;
-}
-
-img {
-  width: 50px;
-  height: 50px;
 }
 
 .is-blue {
@@ -27,6 +21,6 @@ img {
 }
 
 .is-margin {
-  margin-left: 27px;
-  margin-top: 12px;
+  /* margin-left: 27px; */
+  /* margin-top: 12px; */
 }
