--- a/src/app/components/parking/map/map.component.html
+++ b/src/app/components/parking/map/map.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="row form-group is-blue">
       <span class="btn-primary">
-        <i class="fa fa-search is-margin"></i>
+        <i class="fa fa-search ml-4 mt-2"></i>
       </span>
         <input type="text"
                style="background-color: #0c78fd; color: white;"
