--- a/src/app/components/parking/parking-list/parking-list.component.html
+++ b/src/app/components/parking/parking-list/parking-list.component.html
@@ -6,123 +6,7 @@
   </div>
 
   <div class="row align-items-center justify-content-center" *ngFor="let parking of parkings; let i = index">
-    <div class="card col-xs-12 col-sm-6 mt-3">
-        <form #editForm="ngForm" (ngSubmit)="onSubmitEdit(editForm.value)">
-        <div class="mt-3">
-          <div class="card-header text-left">
-            <h4>{{parking.name}}</h4>
-          </div>
-        </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item mt-4">
-                  <h6 class="mt-2">{{ parking.address }}</h6>
-              </li>
-                  <!--
-                <div class="input-group"> -->
-
-                <input
-                  class="form-control"
-                  type="hidden"
-                  name="address"
-                  #address="ngModel"
-                  [value]="parking.address"
-                  [(ngModel)]="parking.address"
-                required>
-
-                <!-- <div (click)="toggleAddress()"><i class="fas fa-edit"></i></div> -->
-
-              <!-- </div> -->
-
-               <!-- Inicio Añadido buscador -->
-             <div (click)="toggleAddress()">
-                <li class="list-group-item">
-                  <input
-                    [readonly]="!isAddressDisabled"
-                    id="address"
-                    placeholder="Enter new parking address"
-                    autocorrect="off"
-                    autocapitalize="off"
-                    spellcheck="off"
-                    type="text"
-                    class="form-control"
-                    #search
-                    [formControl]="searchControl[i]">
-                </li>
-            </div>
-              <!-- Fin Añadido buscador -->
-<div class="form-row ml-5 mt-3">
-              <!-- <li class="list-group-item"> -->
-  <div class="form-group">
-                <label class="mt-2 ml-3">Spots</label>
-
-                <div class="col-8">
-                <input
-                  class="form-control"
-                  type="text"
-                  name="totalParkingSpots"
-                  #totalParkingSpots="ngModel"
-                  [value]="parking.totalParkingSpots"
-                  [(ngModel)]="parking.totalParkingSpots"
-                required>
-              </div>
-  </div>
-
-              <!-- </li> -->
-
-  <div class="form-group">
-                  <label class="mt-2 ml-3">Schedule</label>
-                  <div class="col-8">
-                <input
-                  type="text"
-                  class="form-control"
-                  name="schedule"
-                  #schedule="ngModel"
-                  [value]="parking.schedule"
-                  [(ngModel)]="parking.schedule"
-                required>
-              </div>
-  </div>
-
-</div>
-              <input name="id"
-                type="hidden"
-                #id="ngModel"
-                [value]="parking.id"
-                [(ngModel)]="parking.id">
-
-              <input
-                 class="form-control"
-                 type="hidden"
-                 name="longitude"
-                 #parking.longitude="ngModel"
-                 [value]="parking.location[0]"
-                [(ngModel)]="parking.location[0]"
-              required>
-
-              <input
-                type="hidden"
-                class="form-control"
-                name="latitude"
-                #parking.latitude="ngModel"
-                [value]="parking.location[1]"
-                [(ngModel)]="parking.location[1]"
-              required>
-            </ul>
-
-              <button class="btn btn-success btn-sm mt-3 ml-2">Save</button>
-        </form>
-
-        <form class="negative" #deleteForm="ngForm" (ngSubmit)="onSubmitDelete(deleteForm.value)">
-          <input
-          name="id"
-          type="hidden"
-          #id="ngModel"
-          [value]="parking.id"
-          [(ngModel)]="parking.id">
-          <button class="btn btn-danger btn-sm mt-2 mb-4 ml-2">Delete</button>
-        </form>
-
-    </div>
+    <app-parking-item class="card col-xs-12 col-sm-6 mt-3" [parking]="parking" (onDelete)="removeParking($event)"></app-parking-item>
   </div>
 </div>
 
