attibrute error parking-item component fixed

--- a/src/app/components/parking/parking-item/parking-item.component.html
+++ b/src/app/components/parking/parking-item/parking-item.component.html
@@ -31,7 +31,7 @@
             type="text"
             class="form-control"
             #search
-            [formControl]="searchControl[i]">
+            [formControl]="searchControl">
         </li>
       </div>
 
