--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="contenedor">
 <app-nav></app-nav>
+<div class="contenedor" (click)="closeButton()">
 <router-outlet></router-outlet>
 </div>
