--- a/src/app/components/parking/map/map.component.html
+++ b/src/app/components/parking/map/map.component.html
@@ -1,4 +1,4 @@
-<div class="row form-group is-blue" (click)="closeMap()">
+<div class="row form-group is-blue">
       <span class="btn-primary">
         <i class="fa fa-search ml-4 mt-2"></i>
       </span>
