--- a/src/app/components/parking/parking-create/parking-create.component.html
+++ b/src/app/components/parking/parking-create/parking-create.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-
+<div class="row align-items-center justify-content-center">
   <h1>Create New Parking</h1>
-
+</div>
 
   <agm-map
     [longitude]="location[0]"
