--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -4,18 +4,18 @@
     <h1>Users List</h1>
   </div>
 
-    <h6>Filter by: </h6>
-    <input type="text" [(ngModel)]="cityTerm" placeholder=" City">
-    <input type="text" [(ngModel)]="nameTerm" placeholder=" Name">
+    <input type="text" [(ngModel)]="cityTerm" placeholder=" Filter by city">
+    <input type="text" [(ngModel)]="nameTerm" placeholder=" Filter by name">
+    <input type="text" [(ngModel)]="emailTerm" placeholder=" Filter by email">
 
 
-  <div class="row align-items-center justify-content-center mt-4" *ngFor="let user of users | filterbycity:cityTerm | filterbyUsername:nameTerm">
+  <div class="row align-items-center justify-content-center mt-4" *ngFor="let user of users | filterbycity:cityTerm | filterbyUsername:nameTerm | filterbyUsermail:emailTerm">
     <!-- <div class="panel-group form-group"> -->
       <div class="card col-6">
 
         <form class="contenedor mt-3" #editForm="ngForm" (ngSubmit)="onSubmitEdit(editForm.value)">
           <div class="card-header text-left">
-            <h4><strong>{{user.name}}</strong> <i>from {{user.city}}</i></h4>
+            <h4><strong>{{user.name | capitalize }}</strong> <i>from {{user.city | capitalize}}</i></h4>
           </div>
           <ul class="list-group list-group-flush mt-2">
           <li class="list-group-item col-9">
@@ -48,7 +48,7 @@
                 [value]="user.id"
                 [(ngModel)]="user.id">
 
-            <button class="btn btn-success mt-4">Save</button>
+            <button class="btn btn-success btn-sm mt-4">Save</button>
           </ul>
         </form>
 
@@ -59,7 +59,7 @@
             [value]="user.id"
             [(ngModel)]="user.id">
 
-          <button class="btn btn-danger negative">Delete</button>
+          <button class="btn btn-danger btn-sm negative">Delete</button>
         </form>
 
 
