--- a/src/app/components/parking/parking-item/parking-item.component.html
+++ b/src/app/components/parking/parking-item/parking-item.component.html
@@ -2,12 +2,12 @@
   <form #editForm="ngForm" (ngSubmit)="onSubmitEdit(editForm.value)">
     <div class="mt-3">
       <div class="card-header text-left">
-        <h4>{{ parking.name }}</h4>
+        <h4>{{ parking.name | capitalize }}</h4>
       </div>
     </div>
     <ul class="list-group list-group-flush">
       <li class="list-group-item mt-4">
-        <h6 class="mt-2">{{ parking.address }}</h6>
+        <h6 class="mt-2">{{ parking.address | capitalize}}</h6>
       </li>
 
       <input
