--- a/src/app/components/parking/parking-list/parking-list.component.html
+++ b/src/app/components/parking/parking-list/parking-list.component.html
@@ -5,10 +5,18 @@
     </div>
   </div>
 
+  <br>
+  
+  <div class="row align-items-center justify-content-center">
+    <div class="form-group">
       <input type="text" [(ngModel)]="parkingnameTerm" placeholder=" Filter by name">
+    </div>
+    <div class="form-group">
       <input type="text" [(ngModel)]="parkingaddressTerm" placeholder=" Filter by address">
+    </div>
+  </div>
 
   <div class="row align-items-center justify-content-center" *ngFor="let parking of parkings | filterbyParkingname:parkingnameTerm | filterbyParkingaddress:parkingaddressTerm">
-    <app-parking-item class="card col-xs-12 col-sm-6 mt-3" [parking]="parking" (onDelete)="removeParking($event)"></app-parking-item>
+    <app-parking-item class="card col-10 col-sm-10 col-lg-6 col-xl-6 mt-3" [parking]="parking" (onDelete)="removeParking($event)"></app-parking-item>
   </div>
 </div>
