--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -4,21 +4,31 @@
     <h1>Users List</h1>
   </div>
 
-    <input type="text" [(ngModel)]="cityTerm" placeholder=" Filter by city">
-    <input type="text" [(ngModel)]="nameTerm" placeholder=" Filter by name">
-    <input type="text" [(ngModel)]="emailTerm" placeholder=" Filter by email">
+  <br>
 
+  <div class="row align-items-center justify-content-center">
+    <div class="form-group">
+      <input class="form-control" type="text" [(ngModel)]="cityTerm" placeholder=" Filter by city">
+    </div>
+    <div class="form-group">
+      <input class="form-control" type="text" [(ngModel)]="nameTerm" placeholder=" Filter by name">
+    </div>
+    <div class="form-group">
+      <input class="form-control" type="text" [(ngModel)]="emailTerm" placeholder=" Filter by email">
+    </div>
+  </div>
 
-  <div class="row align-items-center justify-content-center mt-4" *ngFor="let user of users | filterbycity:cityTerm | filterbyUsername:nameTerm | filterbyUsermail:emailTerm">
+  <div class="row align-items-center justify-content-center"
+       *ngFor="let user of users | filterbycity:cityTerm | filterbyUsername:nameTerm | filterbyUsermail:emailTerm">
     <!-- <div class="panel-group form-group"> -->
-      <div class="card col-6">
+      <div class="card mt-4 col-10 col-sm-10 col-lg-6 col-xl-6">
 
         <form class="contenedor mt-3" #editForm="ngForm" (ngSubmit)="onSubmitEdit(editForm.value)">
           <div class="card-header text-left">
             <h4><strong>{{user.name | capitalize }}</strong> <i>from {{user.city | capitalize}}</i></h4>
           </div>
           <ul class="list-group list-group-flush mt-2">
-          <li class="list-group-item col-9">
+          <li class="list-group-item col-14">
             <div class="input-group">
             <label class="mt-2">Name</label> &nbsp;
             <input type="text"
@@ -30,7 +40,7 @@
             required>
           </div>
           </li>
-          <li class="list-group-item col-9">
+          <li class="list-group-item col-14">
               <div class="input-group">
             <label class="mt-2">Email</label> &nbsp;
               <input type="text"
